Fix Pokedex entry width affecting hatchery and berry entries

--- a/src/styles/pokedex.less
+++ b/src/styles/pokedex.less
@@ -54,7 +54,7 @@
 .pokedex-modal {
   max-width: 1250px!important;
 }
-.pokedexEntry {
+#pokemon-list .pokedexEntry {
   @media (min-width: 768px) {
     max-width: 100% !important;
     flex-basis: 18% !important;
