--- a/src/components/breedingModal.html
+++ b/src/components/breedingModal.html
@@ -145,6 +145,7 @@ aria-labelledby="breedingModalLabel" aria-hidden="true">
                             Unfortunately, you don't have any Pokémon of level 100 to breed.
                         </p>
                         <!-- ko if: App.game.party.hasMaxLevelPokemon() -->
+                        <!-- ko if: App.game.breeding.isModalOpen() -->
                         <ul class="row justify-content-center p-0" data-bind="foreach: lazyLoad($element, PartyController.getHatcherySortedList)">
                             <li class="eggSlot col-sm-4 col-md-3 col-lg-2 pokedexEntry text-nowrap" data-bind="visible: BreedingController.visible($data), style:{background: PokedexHelper.getBackgroundColors($data.name)}, class: App.game.breeding.hasFreeEggSlot() || App.game.breeding.hasFreeQueueSlot() ? '' : 'disabled'">
                                 <span style="top: 0; border-top-left-radius: 6px; border-top-right-radius: 6px;" data-bind="text: $data.name">name</span>
@@ -166,6 +167,7 @@ aria-labelledby="breedingModalLabel" aria-hidden="true">
                                 </div>
                             </li>
                         </ul>
+                        <!-- /ko -->
                         <!-- /ko -->
                     </div>
                 </div>
