Shortcuts layout changed
* Buttons replaced by icons
* Log Book and Damage calculator moved to Shortcuts
* Underground icon requires Koga
* Farm icon requires any of the Snorlax temp battles
* Dock requires Johto
* Shortcut menu appears after starter catch due Log Book and Damage Calculator

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -717,3 +717,21 @@ td.tight {
     font-size: 1.8rem; /* Original: 2rem */
   }
 }
+
+/* Shortcut Icons */
+#shortcutsContainer {
+  .shortcut-icon {
+      background-color: #fff6bd;
+      border: 2px solid #ffbd18;
+      border-radius:6px;
+      cursor: pointer;
+  }
+  .disabled-icon {
+      filter: grayscale(100%);
+      cursor: default;
+
+      img {
+        opacity: .5;
+      }
+  }
+}
