jQuery UI with draggable modal example

--- a/src/components/battleItemContainer.html
+++ b/src/components/battleItemContainer.html
@@ -58,60 +58,66 @@
         </tbody>
       </table>
     </div>
-    <div class="card-header p-0" data-toggle="collapse" href="#fluteItemContainerBody" data-bind="visible: App.game.badgeCase.hasBadge(BadgeEnums.Heat)">
-      <span>Flutes</span>
-    </div>
-    <div id="fluteItemContainerBody" class="card-body p-0 show">
-      <p data-bind="visible: (App.game.challenges.list.disableBattleItems.active() || App.game.challenges.list.disableGems.active()) && App.game.badgeCase.hasBadge(BadgeEnums.Heat)" class="bg-danger my-0">
-          Flutes are disabled.
-      </p>
-      <!-- Flutes -->
-      <table class="table table-bordered m-0" data-bind="visible: App.game.badgeCase.hasBadge(BadgeEnums.Heat)">
-        <tbody>
-          <tbody data-bind="foreach: GameHelper.chunk(6, Object.keys(ItemList).filter(i=>ItemList[i].constructor.name == 'FluteItem'))">
-            <tr data-bind="foreach: $data">
-                 <td class="p-0" data-bind="attr: {
-                                disabled: !player.itemList[$data]()
-                            },
-                            css: {
-                                'bg-primary': FluteEffectRunner.getEffect($data) > 30,
-                                'bg-warning': FluteEffectRunner.getEffect($data) <= 30 && FluteEffectRunner.getEffect($data) > 0,
-                                'bg-secondary': !FluteEffectRunner.isActive($data)(),
-                            },
-                            style: {
-                                'opacity': player.itemList[$data]() || FluteEffectRunner.isActive($data)() ? '1' : '0.1'
-                            },
-                            event: {
-                                click: function(){ItemHandler.useItem($data)}
-                            },
-                            tooltip: {
-                              title: ItemList[$data].getFormattedTooltip(ItemList[$data]),
-                              trigger: 'hover',
-                              placement: $(window).innerWidth() < 768 ? 'bottom' : 'left',
-                              sanitize: false,
-                              html: true
-                            }">
-                <img src="" class="clickable" data-bind="attr: { src: ItemList[$data].image }" width="26px">
 
-            </td>
-            </tr>
-            <tr data-bind="foreach: $data">
-                <td class="text-light p-0">
-              <!-- ko if: FluteEffectRunner.getEffect($data) > 0 -->
-                <code data-bind="
-                text: player.effectTimer[$data](),
-                tooltip: {
-                  title: FluteEffectRunner.fluteTooltip($data),
-                  trigger:'hover',
-                  placement:'bottom',
-                  html:true
-                }">
-                </code>
-              <!-- /ko -->
-                </td>
-            </tr>
+    <div style="position: relative;">
+      <div class="card-header p-0" style="position: relative;" data-toggle="collapse" href="#fluteItemContainerBody" data-bind="visible: App.game.badgeCase.hasBadge(BadgeEnums.Heat)">
+        <span>Flutes</span>
+      </div>
+      <button class='btn btn-sm btn-primary' id="edit_row_btn" style="position: absolute; right: 0px; top: 0px; width: auto; height: 41px;" href="#myModal" data-backdrop="false" data-toggle="modal">
+        List
+      </button>
+      <div id="fluteItemContainerBody" class="card-body p-0 show">
+        <p data-bind="visible: (App.game.challenges.list.disableBattleItems.active() || App.game.challenges.list.disableGems.active()) && App.game.badgeCase.hasBadge(BadgeEnums.Heat)" class="bg-danger my-0">
+            Flutes are disabled.
+        </p>
+        <!-- Flutes -->
+        <table class="table table-bordered m-0" data-bind="visible: App.game.badgeCase.hasBadge(BadgeEnums.Heat)">
+          <tbody>
+            <tbody data-bind="foreach: GameHelper.chunk(6, Object.keys(ItemList).filter(i=>ItemList[i].constructor.name == 'FluteItem'))">
+              <tr data-bind="foreach: $data">
+                  <td class="p-0" data-bind="attr: {
+                                  disabled: !player.itemList[$data]()
+                              },
+                              css: {
+                                  'bg-primary': FluteEffectRunner.getEffect($data) > 30,
+                                  'bg-warning': FluteEffectRunner.getEffect($data) <= 30 && FluteEffectRunner.getEffect($data) > 0,
+                                  'bg-secondary': !FluteEffectRunner.isActive($data)(),
+                              },
+                              style: {
+                                  'opacity': player.itemList[$data]() || FluteEffectRunner.isActive($data)() ? '1' : '0.1'
+                              },
+                              event: {
+                                  click: function(){ItemHandler.useItem($data)}
+                              },
+                              tooltip: {
+                                title: ItemList[$data].getFormattedTooltip(ItemList[$data]),
+                                trigger: 'hover',
+                                placement: $(window).innerWidth() < 768 ? 'bottom' : 'left',
+                                sanitize: false,
+                                html: true
+                              }">
+                  <img src="" class="clickable" data-bind="attr: { src: ItemList[$data].image }" width="26px">
+
+              </td>
+              </tr>
+              <tr data-bind="foreach: $data">
+                  <td class="text-light p-0">
+                <!-- ko if: FluteEffectRunner.getEffect($data) > 0 -->
+                  <code data-bind="
+                  text: player.effectTimer[$data](),
+                  tooltip: {
+                    title: FluteEffectRunner.fluteTooltip($data),
+                    trigger:'hover',
+                    placement:'bottom',
+                    html:true
+                  }">
+                  </code>
+                <!-- /ko -->
+                  </td>
+              </tr>
+            </tbody>
           </tbody>
-        </tbody>
-      </table>
+        </table>
+      </div>
     </div>
 </div>
