--- a/src/components/gemsModalSmall.html
+++ b/src/components/gemsModalSmall.html
@@ -1,56 +1,25 @@
 <!-- dragable and editable bootsttrap modal modal -->
-<div class="modal fade" id="dragable_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header w-100">
-      <div class="row m-0 w-100">
-        <div class="col-md-12 px-4 p-2 dragable_touch d-block">
-          <h3 class="m-0 d-inline">Edit row settings</h3>
-          <button type="button" class="close close_btn" data-dismiss="modal" aria-label="Close" data-backdrop="static" data-keyboard="false"><i class="fa fa-times"></i></button>
-        </div>
+<div class="modal fade" id="dragable_modal" tabindex="-1" role="dialog" aria-labelledby="gemModalSmallLabel" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-scrollable" role="document" style="max-width: 520px;">
+    <div class="modal-content">
 
-
-        <div class="col-md-12 p-0">
-          <ul class="nav nav-tabs custom_tab_on_editor" id="myTab" role="tablist">
-            <li class="nav-item" role="presentation">
-              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#row_seetings_general_tab" role="tab" aria-controls="home" aria-selected="true">General</a>
-            </li>
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#row_seetings_design_tab" role="tab" aria-controls="profile" aria-selected="false">Design</a>
-            </li>
-          </ul>
-        </div>
+      <div class="modal-header dragable_touch py-1">
+        <div class="">Gem list</div>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
 
-    </div>
-
-    <div class="modal-body p-3">
-
-      <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="row_seetings_general_tab" role="tabpanel" aria-labelledby="home-tab">
-          <div class="form-group">
-            <label for="edit_project_name">Add row id</label>
-            <input type="text" class="form-control" id="row_id" >
-          </div>
-          <div class="form-group">
-            <label for="edit_project_name">Add extra class</label>
-            <input type="text" class="form-control" id="edit_project_name" />
+      <div class="modal-body">
+        <div class="row" data-bind="foreach: Array(Gems.nTypes)">
+          <div class="col-4 text-left" style="font-size: 14px;">
+            <span class="d-inline-block" style="width:10px; height:10px; border-radius:100px;" data-bind="style: { 'background-color': TypeColor[$index()] }"></span>
+            <strong><span class="text-left p-1" data-bind="html: PokemonType[$index()] + ':'"></span></strong>
+            <span class="text-left" data-bind="html: App.game.gems.gemWallet[$index()]().toLocaleString('en-US')"></span>
           </div>
         </div>
-        <div class="tab-pane fade" id="row_seetings_design_tab" role="tabpanel" aria-labelledby="profile-tab">...</div>
       </div>
-    </div>
 
-    <div class="modal-footer bg-light">
-      <div class="row w-100">
-        <div class="col-6">
-          <button type="reset" class="btn btn-primary" data-dismiss="modal">Close</button>
-        </div>
-        <div class="col-6 text-right">
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
     </div>
   </div>
-</div>
 </div>
