Avoid draggable modal go out of bounds

--- a/src/components/gemsModalSmall.html
+++ b/src/components/gemsModalSmall.html
@@ -1,6 +1,6 @@
-<!-- dragable and editable bootsttrap modal modal -->
+<!-- Dragable bootsttrap modal -->
 <div class="modal fade" id="dragable_modal" tabindex="-1" role="dialog" aria-labelledby="gemModalSmallLabel" data-backdrop="static" data-keyboard="false">
-  <div class="modal-dialog modal-dialog-scrollable" role="document" style="max-width: 520px;">
+  <div class="modal-dialog modal-dialog-scrollable" role="document" style="max-width: 100%; width: 520px;">
     <div class="modal-content">
 
       <div class="modal-header dragable_touch py-1">
