--- a/src/components/battleItemContainer.html
+++ b/src/components/battleItemContainer.html
@@ -63,7 +63,7 @@
       <div class="card-header p-0" style="position: relative;" data-toggle="collapse" href="#fluteItemContainerBody" data-bind="visible: App.game.badgeCase.hasBadge(BadgeEnums.Heat)">
         <span>Flutes</span>
       </div>
-      <button class='btn btn-sm btn-primary px-1' id="draggable_modal_btn" style="position: absolute; right: 0px; top: 0px; width: auto; height: 41px;" data-backdrop="false" data-toggle="modal"
+      <button class='btn btn-sm btn-primary px-1' id="draggable_gem_list_btn" style="position: absolute; right: 0px; top: 0px; width: auto; height: 41px;" data-backdrop="false" data-toggle="modal"
       data-bind="tooltip: { title: 'Show Gem list', trigger: 'hover' }, visible: App.game.badgeCase.hasBadge(BadgeEnums.Heat)">
         <img src="assets/images/shortcut-icons/gems.png">
       </button>
