--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -757,14 +757,14 @@ td.tight {
   border: 1px dashed #ccc;
 }
 
-#dragable_modal {
+.draggable_modal {
   position: relative;
 }
 
-#dragable_modal .modal-dialog {
+.draggable_modal .modal-dialog {
   position: fixed;
 }
 
-.dragable_touch {
+.draggable_touch {
   cursor: move;
 }
