--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -797,3 +797,8 @@ i[class*="gender-icon-"] {
 .draggable_touch {
   cursor: move;
 }
+
+/* Invert color */
+.filter-invert {
+  filter: invert(1) !important;
+}
