Changed route pokemon list icon

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -802,3 +802,10 @@ i[class*="gender-icon-"] {
 .filter-invert {
   filter: invert(1) !important;
 }
+
+/* Pokemon List icon */
+.route-pokemon-list-icon {
+  background-color: #fff6bd;
+  border: 2px solid #ffbd18;
+  border-radius:6px;
+}
