Desert route code

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -448,6 +448,11 @@ img {
       background-position: center;
   }
 
+  &.desert {
+      background-image: url(../assets/images/battleBackground/desert.png);
+      background-position: 0px -20px;
+  }
+
   h2 {
     font-size: 2rem;
   }
