Update cave stuff
- Give cave backgrounds to Alola Route 13 and Galar Challenge Road
- Remove unused "gem" css

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -428,7 +428,7 @@ img {
       background-position: top;
   }
 
-  &.gem, &.cave-gem {
+  &.cave-gem {
       background-image: url(../assets/images/battleBackground/cave-gem.png);
       background-position: center;
   }
