--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -418,6 +418,11 @@ img {
       background-position: top;
   }
 
+  &.snow {
+      background-image: url(../assets/images/battleBackground/snow.png);
+      background-position: 0px -20px;
+  }
+
   &.fire {
       background-image: url(../assets/images/battleBackground/fire.png);
       background-position: 0px -20px;
