Add Ocean, split Water routes

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -413,6 +413,11 @@ img {
       background-position: top;
   }
 
+  &.water-ocean {
+      background-image: url(../assets/images/battleBackground/water-ocean.png);
+      background-position: 0px -20px;
+  }
+
   &.ice {
       background-image: url(../assets/images/battleBackground/ice.png);
       background-position: top;
