--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -463,6 +463,11 @@ img {
       background-position: 0px -20px;
   }
 
+  &.space {
+      background-image: url(../assets/images/battleBackground/space.png);
+      background-position: top;
+  }
+
   h2 {
     font-size: 2rem;
   }
