--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -468,6 +468,11 @@ img {
       background-position: top;
   }
 
+  &.custom {
+      background-image: var(--custom-battle-background);
+      background-position: center;
+  }
+
   h2 {
     font-size: 2rem;
   }
