--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -32,4 +32,5 @@
   --missingResistant: @missingResistant;
   --completed: @completed;
   --trainer-image: url('../assets/images/profile/trainer-0.png');
+  --custom-battle-background: url('../assets/images/battleBackground/default.png');
 }
