--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -468,6 +468,11 @@ img {
       background-position: top;
   }
 
+  &.stage {
+      background-image: url(../assets/images/battleBackground/stage.png);
+      background-position: 0px -20px;
+  }
+
   h2 {
     font-size: 2rem;
   }
