--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -413,8 +413,8 @@ img {
       background-position: top;
   }
 
-  &.water-ocean {
-      background-image: url(../assets/images/battleBackground/water-ocean.png);
+  &.ocean {
+      background-image: url(../assets/images/battleBackground/ocean.png);
       background-position: 0px -20px;
   }
 
@@ -463,14 +463,14 @@ img {
       background-position: 0px -20px;
   }
 
-  &.space {
-      background-image: url(../assets/images/battleBackground/space.png);
-      background-position: top;
-  }
-
   &.stage {
       background-image: url(../assets/images/battleBackground/stage.png);
       background-position: 0px -20px;
+  }
+
+  &.space {
+      background-image: url(../assets/images/battleBackground/space.png);
+      background-position: top;
   }
 
   h2 {
