--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -453,6 +453,11 @@ img {
       background-position: center;
   }
 
+  &.indoors {
+      background-image: url(../assets/images/battleBackground/indoors.png);
+      background-position: 0px -20px;
+  }
+
   &.graveyard {
       background-image: url(../assets/images/battleBackground/graveyard.png);
       background-position: center;
