--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -478,6 +478,11 @@ img {
       background-position: top;
   }
 
+  &.battlefield {
+      background-image: url(../assets/images/battleBackground/battlefield.png);
+      background-position: center;
+  }
+
   h2 {
     font-size: 2rem;
   }
