--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -458,6 +458,11 @@ img {
       background-position: 0px -20px;
   }
 
+  &.park {
+      background-image: url(../assets/images/battleBackground/park.png);
+      background-position: top;
+  }
+
   &.graveyard {
       background-image: url(../assets/images/battleBackground/graveyard.png);
       background-position: center;
