--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -428,6 +428,11 @@ img {
       background-position: 0px -20px;
   }
 
+  &.fall {
+      background-image: url(../assets/images/battleBackground/fall.png);
+      background-position: top;
+  }
+
   &.fire {
       background-image: url(../assets/images/battleBackground/fire.png);
       background-position: 0px -20px;
@@ -441,6 +446,11 @@ img {
   &.cave-gem {
       background-image: url(../assets/images/battleBackground/cave-gem.png);
       background-position: center;
+  }
+
+  &.cave-water {
+      background-image: url(../assets/images/battleBackground/cave-water.png);
+      background-position: top;
   }
 
   &.power-plant {
